--- a/config.org
+++ b/config.org
@@ -95,7 +95,9 @@ This installs [[https://github.com/emacs-dashboard/emacs-dashboard][emacs-dashbo
     (dashboard-set-footer nil)
     (dashboard-startup-banner 'logo)
     :config
-    (dashboard-setup-startup-hook))
+    (dashboard-setup-startup-hook)
+    (setq dashboard-set-heading-icons t)
+    (setq dashboard-set-file-icons t))
 #+END_SRC
 **** Powerline
 This is a port of the popular [[https://github.com/milkypostman/powerline][Powerline]] modeline customization from Vim. It makes the modeline look a little nicer.
@@ -114,6 +116,11 @@ This is a port of the popular [[https://github.com/milkypostman/powerline][Power
   (use-package smart-mode-line-powerline-theme)
 #+END_SRC
 
+**** all-the-icons
+[[https://github.com/domtronn/all-the-icons.el][all-the-icons.el]] is a package that adds icons to certain parts of Emacs. 
+#+BEGIN_SRC emacs-lisp
+  (use-package all-the-icons)
+#+END_SRC
 *** Programming-related functionality
 **** =lsp= completion
 This installs [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]], which adds IDE-like functionality to Emacs for certain languages through language servers. It also installs [[https://github.com/emacs-lsp/lsp-ui][lsp-ui]], which adds some extra UI functionality that interfaces with =lsp-mode=.
