--- a/config.org
+++ b/config.org
@@ -103,12 +103,12 @@ This sets up some nice bullets for org-mode that look better than the default as
       :hook 
       (org-mode . org-bullets-mode))
 #+END_SRC
-**** Gruvbox
-This installs the [[https://github.com/Greduan/emacs-theme-gruvbox][gruvbox-theme]], which is a really nice dark theme for Emacs and other editors/terminals.
+**** Nord theme
+This installs the [[https://github.com/arcticicestudio/nord-emacs][nord-theme]], which is a really nice dark theme for Emacs and other editors/terminals.
 #+BEGIN_SRC emacs-lisp
-  (use-package gruvbox-theme
+  (use-package nord-theme
     :config
-    (load-theme 'gruvbox-dark-medium t))
+    (load-theme 'nord t))
 #+END_SRC
 **** Dashboard
 This installs [[https://github.com/emacs-dashboard/emacs-dashboard][emacs-dashboard]], which is a far more customizable and better startup screen than the default.
@@ -134,6 +134,8 @@ This is a port of the popular [[https://github.com/milkypostman/powerline][Power
 #+BEGIN_SRC emacs-lisp
   (use-package smart-mode-line
     :config
+    (setq sml/theme 'respectful)
+    (setq sml/no-confirm-load-theme t)
     (sml/setup))
 
   (use-package smart-mode-line-powerline-theme)
@@ -154,7 +156,9 @@ Completion is provided by [[http://company-mode.github.io/][company]], and the [
     :init
     (setq lsp-keymap-prefix "s-l")
     :hook
-    (prog-mode . lsp-deferred))
+    (prog-mode . lsp-deferred)
+    :config
+    (setq read-process-output-max (* 1024 1024)))
 
   (use-package lsp-ui
     :hook
