Removed company-lsp, added the lsp python plugin, added comments.

--- a/config.org
+++ b/config.org
@@ -151,26 +151,42 @@ This is a port of the popular [[https://github.com/milkypostman/powerline][Power
 This installs [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]], which adds IDE-like functionality to Emacs for certain languages through language servers. It also installs [[https://github.com/emacs-lsp/lsp-ui][lsp-ui]], which adds some extra UI functionality that interfaces with =lsp-mode=.
 Completion is provided by [[http://company-mode.github.io/][company]], and the [[https://github.com/tigersoldier/company-lsp][company-lsp]] plugin for company to interface with LSP.
 #+BEGIN_SRC emacs-lisp
+  ;; install lsp-mode.
   (use-package lsp-mode
     :commands (lsp lsp-deferred)
     :init
-    (setq lsp-keymap-prefix "s-l")
+    (setq lsp-keymap-prefix "C-c l")
     :hook
     (prog-mode . lsp-deferred)
     :config
     (setq read-process-output-max (* 1024 1024)))
 
+  ;; installs lsp ui
   (use-package lsp-ui
     :hook
     (lsp-mode . lsp-ui-mode)
     :custom-face
     (lsp-ui-doc-background ((nil (:background "#1d2021")))))
 
+  ;; java support
   (use-package lsp-java
     :after lsp
     :hook
     (java-mode . lsp))
 
+  ;; lsp python, support for python
+  (use-package lsp-python-ms
+    :ensure t
+    :init (setq lsp-python-ms-auto-install-server t)
+    :hook (python-mode . (lambda ()
+			    (require 'lsp-python-ms)
+			    (lsp-deferred))))  ; or lsp-deferred
+
+
+  ;; sets up helm support
+  (use-package helm-lsp :commands helm-lsp-workspace-symbol)
+
+  ;; sets up company
   (use-package company
     :hook
     (prog-mode . company-mode)
@@ -178,10 +194,6 @@ Completion is provided by [[http://company-mode.github.io/][company]], and the [
     ;; recommended settings by lsp-mode
     (setq company-minimum-prefix-length 1
 	  company-idle-delay 0.0))
-
-  (use-package company-lsp
-    :defer t
-    :commands company-lsp)
 #+END_SRC
 **** Magit
 This installs a package called [[https://github.com/magit/magit][magit]], which allows you to use git within emacs itself. It also configures 
