--- a/config.org
+++ b/config.org
@@ -68,10 +68,10 @@ By default, Emacs doesn't replace text that you've selected with newly typed tex
   (delete-selection-mode +1)
 #+END_SRC
 *** Font setting
-This sets up =Terminus= as the font of choice. You can replace it with whatever font you want.
+This sets up =Dina= as the font of choice. You can replace it with whatever font you want.
 #+BEGIN_SRC emacs-lisp
   (add-to-list 'default-frame-alist
-	       '(font . "Terminus-8"))
+	       '(font . "Dina-8"))
 #+END_SRC
 *** Change undo binding
 For this, I unset the default binding for =C-z= (which is to suspend an emacs frame) and set it to be 
@@ -186,7 +186,6 @@ This installs [[https://github.com/joaotavora/eglot][eglot]], which adds IDE-lik
   (use-package eglot
     :hook
     (prog-mode . eglot-ensure)
-    (conf-mode . eglot-ensure)
   )
 
   ;; sets up company
