--- a/config.org
+++ b/config.org
@@ -68,10 +68,10 @@ By default, Emacs doesn't replace text that you've selected with newly typed tex
   (delete-selection-mode +1)
 #+END_SRC
 *** Font setting
-This sets up =Dina= as the font of choice. You can replace it with whatever font you want.
+This sets up =iosevka= as the font of choice. You can replace it with whatever font you want.
 #+BEGIN_SRC emacs-lisp
   (add-to-list 'default-frame-alist
-	       '(font . "Dina-8"))
+	       '(font . "Iosevka-11"))
 #+END_SRC
 *** Change undo binding
 For this, I unset the default binding for =C-z= (which is to suspend an emacs frame) and set it to be 
@@ -108,7 +108,6 @@ This installs the [[https://github.com/arcticicestudio/nord-emacs][nord-theme]],
 #+BEGIN_SRC emacs-lisp
   (use-package base16-theme
     :config
-    (setq base16-theme-256-color-source colors)
     (setq base16-distinct-fringe-background nil)
     (load-theme 'base16-brewer t))
 
@@ -157,9 +156,8 @@ This installs [[https://github.com/emacs-dashboard/emacs-dashboard][emacs-dashbo
 **** Powerline
 This is a port of the popular [[https://github.com/milkypostman/powerline][Powerline]] modeline customization from Vim. It makes the modeline look a little nicer.
 #+BEGIN_SRC emacs-lisp
-  (use-package powerline
-    :config
-    (powerline-default-theme))
+  (use-package doom-modeline
+    :hook (after-init . doom-modeline-mode))
 #+END_SRC
 **** smart-mode-line
 [[https://github.com/Malabarba/smart-mode-line/][smart-mode-line]] is a customization package designed to add colors and other niceties to the modeline.
